--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
   <nav class="navbar navbar-light bg-light my-navbar fixed-top">
     <a class="navbar-brand" href="#">
       <img src="/image/logo.png" width="40" height="40" class="d-inline-block align-top" alt="">
-      Lakshh
+     &nbsp;Lakshh
     </a>
     <form class="form-inline my-2 my-lg-0 search-bar">
       <input class="form-control sear-box" type="search" placeholder="Can I help you..." aria-label="Search">
       <button class="btn my-sm-0 my-btn" type="submit"><i class="fa-solid fa-magnifying-glass white"></i></button>
     </form>
-    <i class="fa-solid fa-user fa-xl"></i>
+    <i class="fa-solid fa-user fa-2xl"></i>
     <p class="sign"> Hello, Sign In <br> <strong>Your Account!</strong></p>
     <div class="icons-nav1">
-      <a href="" class="text-dark space"><i class="fa-solid fa-heart fa-xl"></i></a>
-      <a href="" class="text-dark space"><i class="fa-solid fa-cart-shopping fa-xl"></i></a>
+      <a href="" class="text-dark space"><i class="fa-solid fa-heart fa-2xl"></i></a>
+      <a href="" class="text-dark space"><i class="fa-solid fa-cart-shopping fa-2xl"></i></a>
     </div>
   </nav>
   <!-- nav-bar end -->
@@ -48,12 +48,12 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="d-block w-100"
-          src="https://images-eu.ssl-images-amazon.com/images/G/31/img21/Wireless/Shreyansh/BAU/Unrexc/D70978891_INWLD_BAU_Unrec_Uber_PC_Hero_3000x1200._CB594707876_.jpg"
+          src="https://images-eu.ssl-images-amazon.com/images/G/31/img23/Softlines_JWL_SH_GW_Assets/Sept/Onecard/Sports/Sports_3000._CB595761830_.jpg"
           alt="First slide">
       </div>
       <div class="carousel-item">
         <img class="d-block w-100"
-          src="https://images-eu.ssl-images-amazon.com/images/G/31/img23/Softlines_JWL_SH_GW_Assets/Sept/Onecard/Sports/Sports_3000._CB595761830_.jpg"
+          src="https://images-eu.ssl-images-amazon.com/images/G/31/img2020/img21/apparelGW/sepatf23/mfd/unrec/MA_3000._CB577862212_.jpg"
           alt="Second slide">
       </div>
       <div class="carousel-item">
@@ -85,7 +85,7 @@
           </div>
           <div class="prodt_info">
             <h4 class="prodt_head">Headphones</h4>
-            <p class="prodt_count">5 products</p>
+            <p class="prodt_count">512 products</p>
           </div>
         </div>
         <!-- product holder ends -->
@@ -99,7 +99,7 @@
           </div>
           <div class="prodt_info">
             <h4 class="prodt_head">Smartphones</h4>
-            <p class="prodt_count">3 products</p>
+            <p class="prodt_count">323 products</p>
           </div>
         </div>
       </div>
@@ -112,7 +112,7 @@
           </div>
           <div class="prodt_info">
             <h4 class="prodt_head">Smartwatch</h4>
-            <p class="prodt_count">6 products</p>
+            <p class="prodt_count">646 products</p>
           </div>
         </div>
         <!-- product holder ends -->
@@ -126,7 +126,7 @@
           </div>
           <div class="prodt_info">
             <h4 class="prodt_head">Earphones</h4>
-            <p class="prodt_count">5 products</p>
+            <p class="prodt_count">504 products</p>
           </div>
         </div>
       </div>
