--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- nav-bar start -->
   <nav class="navbar navbar-light bg-light my-navbar fixed-top">
     <a class="navbar-brand" href="#">
-      <img src="/image/logo.png" width="40" height="40" class="d-inline-block align-top" alt="">
+      <img src="image/logo.png" width="40" height="40" class="d-inline-block align-top" alt="">
      &nbsp;Lakshh
     </a>
     <form class="form-inline my-2 my-lg-0 search-bar">
